iptables-rules
# Do not edit. This file is provisioned by ansible.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]


-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i eth0 -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -j LOG -m limit --limit 5/min --log-prefix="[INPUT] "

# Configuración del DNS
-A INPUT -p udp --dport 53 -j ACCEPT
-A INPUT -p udp --sport 53 -j ACCEPT

# Configuración para DHCP
-A INPUT -p udp --sport 68 -j ACCEPT
-A INPUT -p udp --sport 67 -j ACCEPT


# Conexión al exterior para cada uno de las máquinas
-A INPUT -p tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

-A INPUT -p icmp -j ACCEPT

-A INPUT -j DROP



-A FORWARD -j LOG --log-prefix="[FORWARD] "

-A FORWARD -p icmp -j ACCEPT

-A FORWARD -p tcp --dport 80 -j ACCEPT
-A FORWARD -p tcp --sport 80 -j ACCEPT

# Configuración para el servicio tftp
-A FORWARD -i eth3 -p udp --dport 69 -j ACCEPT
# -A FORWARD -m udp -p udp --sport 69 -j ACCEPT


# -A FORWARD -i eth2 -m udp -p udp --dport 69 -j ACCEPT
# -A FORWARD -i eth3 -o eth1 -j ACCEPT
# -A FORWARD -i eth1 -o eth3 -m state --state ESTABLISHED,RELATED -j ACCEPT

-A FORWARD -i eth2 -o eth1 -j ACCEPT
-A FORWARD -i eth1 -o eth2 -m state --state ESTABLISHED,RELATED -j ACCEPT

-A FORWARD -j DROP

-A OUTPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 22 -j ACCEPT

# Configuración DNS para establecer updates de las máquinas

-A OUTPUT -p tcp --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp --dport 53 -m state --state NEW -j ACCEPT

# Configuración del DHCP

-A OUTPUT -p udp --sport 68 -j ACCEPT
-A OUTPUT -p udp --sport 67 -j ACCEPT

# Configuración para las máquinas que tengan salida a internet

-A OUTPUT -p tcp --dport 80 -m state --state NEW -j ACCEPT


# Configuración para icmp
-A OUTPUT -p icmp -j ACCEPT

-A OUTPUT -j LOG --log-prefix="[OUTPUT] "
-A OUTPUT -j DROP

COMMIT
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
*nat
:PREROUTING ACCEPT [0_0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth1 -j MASQUERADE
-A PREROUTING -i eth1 -p tcp --dport 80 -j DNAT --to-destination 10.0.0.2:80
COMMIT
