Posibility.txt
# Do not edit. This file is provisioned by ansible.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 22 -j ACCEPT
# -A INPUT -i eth0 -p udp -j ACCEPT
# -A INPUT -j LOG -m limit --limit 5/min --log-prefix="[INPUT] "
# -A INPUT -j DROP

-A FORWARD -p icmp -j ACCEPT
# -A FORWARD -p udp -j ACCEPT
-A FORWARD -j LOG --log-prefix="[FORWARD] "
-A FORWARD -j DROP

-A OUTPUT -p tcp -m multiport --dsports 80,433 -j ACCEPT
# -A OUTPUT -p udp -m multiport --dsports 53 -j ACCEPT 
-A OUTPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -j LOG --log-prefix="[OUTPUT] "
-A OUTPUT -j DROP
COMMIT
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
*nat
:PREROUTING ACCEPT [0_0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
